welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:7: error: Missing closing brace `}' assumed here
override def run() {
^ColumnByColumn:7: error: expected start of definition
override def run() {
         ^